kubernetes/neo/apps/istio-gateways/egress-gateway/gateways/shared-egress-waypoint.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: egress-shared-waypoint
  labels:
    istio.io/waypoint-for: all
spec:
  addresses:
  - value: istio-egressgateway.istio-gateways.svc.cluster.local
    type: Hostname
  gatewayClassName: istio-waypoint
  listeners:
  - name: http
    hostname: "*.abasitt.tech"
    protocol: HTTP
    port: 80
  - name: mesh
    port: 15008
    protocol: HBONE
    allowedRoutes:
      namespaces:
        from: All
